<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:id="@+id/playtext"
            android:padding="20dp"
            android:text="@string/play"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/sliderAlpha"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueAlpha"
            android:text="@string/alpha"
            android:textSize="24sp"
            android:gravity="center"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/sliderRed"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueRed"
            android:text="@string/red"
            android:textSize="24sp"
            android:gravity="center"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/sliderGreen"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueGreen"
            android:text="@string/green"
            android:textSize="24sp"
            android:gravity="center"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/sliderBlue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueBlue"
            android:text="@string/blue"
            android:textSize="24sp"
            android:gravity="center"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/sliderSize"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valueSize"
            android:text="@string/size"
            android:textSize="24sp"
            android:gravity="center"/>
        <!-->Typedef Faces<-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#000000">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/type" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Default"
                        android:onClick="setDefault"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Default_Bold"
                        android:onClick="setDefault_Bold"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Monospace"
                        android:onClick="setMonospace"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Sans_Serif"
                        android:onClick="setSans_Serif"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/Serif"
                        android:onClick="setSerif"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <!-->Typedef Style<-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#ffffff">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/style" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bold"
                        android:onClick="setBold"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bold_italic"
                        android:onClick="setBold_Italic"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/italic"
                        android:onClick="setItalic"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/normal"
                        android:onClick="setNormal"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:visibility="gone"
            android:text="Send Font"/>
    </LinearLayout>
</ScrollView>